--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="./image/icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./image/logo.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Farfan David Dante">
-  <meta name="description" content="Mi Portfolio Personal">
-  <meta name="keywords" content="HTML, CSS, JavaScript, React">
+  <meta name="description" content="AriRock Portfolio">
+  <meta name="keywords" content="Art, Arte, Pintura">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
