add meta google site verification

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Farfan David Dante">
   <meta name="description" content="AriRock Portfolio">
   <meta name="keywords" content="Art, Arte, Pintura">
+  <meta name="google-site-verification" content="IU4ZWsnWPJQXup3lMILBc6hpHyGfK9tE9K385BpBhQw" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
