--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Farfan David Dante">
   <meta name="description" content="AriRock Portfolio">
-  <meta name="keywords" content="Art, Arte, Pintura">
+  <meta name="keywords" content="AriRockArt, AriRockArt.com.ar, AriRockArt.com ,Art, Arte, Pintura">
   <meta name="google-site-verification" content="IU4ZWsnWPJQXup3lMILBc6hpHyGfK9tE9K385BpBhQw" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
